setting course ending time

--- a/style.css
+++ b/style.css
@@ -120,10 +120,10 @@
     padding: 73px;
 }
 
-/* footer{
+footer{
     padding: 23px;
     text-align: center;
-} */
+}
 
 .buttons{
     display: flex;
